--- a/Market_Maker_game.ipynb
+++ b/Market_Maker_game.ipynb
@@ -253,6 +253,26 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "bf12a135-9ee8-4e65-913a-f41a0ed247fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average reward of the Market Maker \n",
+      "under the strategy pi_0: -0.9926643228119428\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Average reward of the Market Maker \\n'\n",
+    "      f'under the strategy pi_0: {MMGame.rewards.mean()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "d65c51b2-6c34-4b8c-87dc-de41991e9714",
    "metadata": {},
    "outputs": [],
@@ -263,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "c922ed61-570a-4a59-9ef7-af1692790588",
    "metadata": {},
    "outputs": [
@@ -287,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "54e8fc9d-d778-4615-9828-f7a69254ee2a",
    "metadata": {},
    "outputs": [
@@ -313,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "cac26010-19c3-4463-90b9-2f3933f3402c",
    "metadata": {},
    "outputs": [
@@ -337,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "e0003a28-33d4-4ab3-9d65-a1a41f8c9b95",
    "metadata": {},
    "outputs": [
@@ -370,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "d13ef6b1-9889-4261-bc0c-57bdcab1eba5",
    "metadata": {},
    "outputs": [
@@ -394,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "553e1856-e619-4b0d-8413-2c43114f3584",
    "metadata": {},
    "outputs": [
@@ -410,6 +430,26 @@
    "source": [
     "print(f'Average inventory levels of the Market Maker \\n'\n",
     "      f'under the improved strategy pi_1: {MMGame.z[:,0].mean()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "b61d775a-a434-4e2a-a54d-6f0ecff190cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average reward of the Market Maker \n",
+      "under the strategy pi_1: -0.01454645543662611\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Average reward of the Market Maker \\n'\n",
+    "      f'under the strategy pi_1: {MMGame.rewards.mean()}')"
    ]
   },
   {
